Fixed bug #76094 (Access violation when using opcache)